<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tennis Wear Training</string>
    <string name="setup_one_set">1 set</string>
    <string name="setup_three_sets">3 Sets</string>
    <string name="setup_five_set">5 Sets</string>
    <string name="setup_four_game">4 Games</string>
    <string name="setup_six_games">6 Games</string>
    <string name="setup_tiebreak">Tiebreak</string>
    <string name="setup_deuce">Deuce</string>
    <string name="setup_deciding_game">Deciding Game</string>
    <string name="setup_deciding_point">Deciding Point</string>
    <string name="setup_serve_first">Bottom Serve</string>
    <string name="setup_receive">Bottom Receive</string>
    <string name="setup_confirm">Ok</string>
    <string name="game_back">Back</string>
    <string name="game_reset">Reset</string>
    <string name="score_up">Score Top</string>
    <string name="score_down">Score Bottom</string>
    <string name="score_action">Act</string>
    <string name="main_standalone">Standalone</string>
    <string name="main_wear_mode">Wear Mode</string>
    <string name="game_duration">Duration</string>
    <string name="game_show_result_dalog">Show game result?</string>
    <string name="dialog_confirm">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="game_save">Save</string>
    <string name="game_load">Load</string>
    <string name="game_load_or_delete">Load or delete %s ?</string>
    <string name="game_delete">Delete</string>
    <string name="main_menu_new">New Game</string>
    <string name="main_menu_continue">Continue</string>
    <string name="result_defeat">defeated</string>
    <string name="save_file_name">Save File Name</string>
    <string name="input_player_or_group_up">Single or Double Player Group</string>
    <string name="input_vesus">vs.</string>
    <string name="menu_setup_men">Player</string>
    <string name="setup_first_serve">Serve</string>
    <string name="permission_descript">Write Permission required if you want to save result as files.</string>
    <string name="game_select_action">Select action:</string>
    <string name="game_ace">Ace</string>
    <string name="game_second_serve">Second Serve</string>
    <string name="game_double_faults">Double Faults</string>
    <string name="game_unforced_error">Unforced Error</string>
    <string name="game_forehand_winner">Forehand Winner</string>
    <string name="game_backhand_winner">Backhand Winner</string>
    <string name="game_forehand_volley">Forehand Volley Winner</string>
    <string name="game_backhand_volley">Backhand Volley Winner</string>
    <string name="game_foul_to_lose">Foul to lose</string>
    <string name="game_other_winner">Other Winner</string>
    <string name="game_serve_net">Serve Net In</string>
    <string name="menu_setup_stat">Stat</string>
    <string name="stat_first_serve">1st Serve</string>
    <string name="stat_second_serve">2nd Serve</string>
    <string name="stat_first_serve_won">1st Serve Won</string>
    <string name="stat_second_serve_won">2nd Serve Won</string>
    <string name="stat_winner">Winner</string>
    <string name="stat_unforced_error">Unforced Error</string>
    <string name="stat_net_point_won">Net Point Won</string>
    <string name="stat_break_point_won">Break Point Won</string>
    <string name="menu_setup_bluetooth">Bluetooth</string>
</resources>

