<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/editFileName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLines="1"
        android:hint="@string/save_file_name"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editPlayerUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLines="1"
        android:hint="@string/input_player_or_group_up"
        android:padding="10dp" />

    <TextView
        android:text="@string/input_vesus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/editPlayerDown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLines="1"
        android:hint="@string/input_player_or_group_up"
        android:padding="10dp" />
</LinearLayout>