<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/setLayout"
            android:layout_weight="3"
            android:visibility="gone">


            <TextView
                android:text="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSetUp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="70sp"/>

            <TextView
                android:text="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSetDown"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="70sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">


            <TextView
                android:text="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewGameUp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="70sp"/>

            <TextView
                android:text="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewGameDown"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="70sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:src="@drawable/ball_icon"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewServeUp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:text="40A"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewPointUp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="70sp"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:src="@drawable/ball_icon"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewServeDown"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:text="40"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewPointDown"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="70sp"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:text="@string/score_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnOpptScore"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/game_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnBack"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">



                <Button
                    android:text="@string/score_down"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnYouScore"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/game_reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnReset"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentTime"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="40sp"/>

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gameTime"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="40sp"/>
        </LinearLayout>
    </LinearLayout>




</LinearLayout>